--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Student Dashboard - Home</title>
+<title>Student Dashboard - index</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="navbar">
-<a href="home.html" class="active">Home</a>
+<a href="index.html" class="active">Home</a>
 <a href="certificate.html">Certificate</a>
 <a href="resume.html">Resume</a>
 <a href="contact.html">Contact</a>
